revised and updated files

--- a/mission_to_mars_challenge.ipynb
+++ b/mission_to_mars_challenge.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "id": "96825a5d",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "id": "260085bb",
    "metadata": {},
    "outputs": [
@@ -45,9 +45,7 @@
       "====== WebDriver manager ======\n",
       "Current google-chrome version is 92.0.4515\n",
       "Get LATEST driver version for 92.0.4515\n",
-      "Get LATEST driver version for 92.0.4515\n",
-      "Trying to download new driver from https://chromedriver.storage.googleapis.com/92.0.4515.107/chromedriver_mac64.zip\n",
-      "Driver has been saved in cache [/Users/jade/.wdm/drivers/chromedriver/mac64/92.0.4515.107]\n"
+      "Driver [/Users/jade/.wdm/drivers/chromedriver/mac64/92.0.4515.107/chromedriver] found in cache\n"
      ]
     }
    ],
@@ -362,9 +360,96 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "51473b1c",
+   "metadata": {},
+   "source": [
+    "## D1: Scrape High-Resolution Mars' Hemisphere Images and Titles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "665bc252",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1. Use browser to visit the URL \n",
+    "url = 'https://astrogeology.usgs.gov/search/results?q=hemisphere+enhanced&k1=target&v1=Mars'\n",
+    "    \n",
+    "browser.visit(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "cebb46c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 2. Create a list to hold the images and titles.\n",
+    "hemisphere_image_urls = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "54aac112",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 3. Write code to retrieve the image urls and titles for each hemisphere.\n",
+    "for i in range(4):\n",
+    "    hemisphere = {}\n",
+    "    keys = range(2)\n",
+    "    links = browser.find_by_tag(\"div.description a.itemLink.product-item\")[i]\n",
+    "    links.click()\n",
+    "    html = browser.html\n",
+    "    img_soup = soup(html, 'html.parser')\n",
+    "    img_url_rel = img_soup.select_one('li a').get('href')\n",
+    "    title = img_soup.select_one('h2', class_='title').get_text()\n",
+    "    values = [img_url_rel, title]\n",
+    "    for i in keys:\n",
+    "        hemisphere[i] = values[i]\n",
+    "    hemisphere['img_url'] = hemisphere.pop(0)\n",
+    "    hemisphere['title'] = hemisphere.pop(1)\n",
+    "    hemisphere_image_urls.append(hemisphere)\n",
+    "    browser.back()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "3c4dea81",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'img_url': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/cerberus_enhanced.tif/full.jpg',\n",
+       "  'title': 'Cerberus Hemisphere Enhanced'},\n",
+       " {'img_url': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/schiaparelli_enhanced.tif/full.jpg',\n",
+       "  'title': 'Schiaparelli Hemisphere Enhanced'},\n",
+       " {'img_url': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/syrtis_major_enhanced.tif/full.jpg',\n",
+       "  'title': 'Syrtis Major Hemisphere Enhanced'},\n",
+       " {'img_url': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/valles_marineris_enhanced.tif/full.jpg',\n",
+       "  'title': 'Valles Marineris Hemisphere Enhanced'}]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 4. Print the list that holds the dictionary of each image url and title.\n",
+    "hemisphere_image_urls"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6eadbbc",
+   "id": "3fadd0d4",
    "metadata": {},
    "outputs": [],
    "source": []
